[gd_scene load_steps=2 format=3 uid="uid://bsl2i4kg7du4v"]

[ext_resource type="Script" uid="uid://cx2p57qvguqcs" path="res://scripts/level_select.gd" id="1_7vpgv"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vpgv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonLevel1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Modulo 1"

[node name="ButtonLevel2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "M贸dulo 2"

[node name="ButtonLevel3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "M贸dulo 3"

[node name="ButtonLevel4" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "M贸dulo 4"

[node name="ButtonLevel5" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "M贸dulo 5"

[node name="ButtonBack" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Volver"
